tests/errors/slice-pattern-length-checked.ari
fn main() -> i64 {
  var value = 7;
  let view: Slice[i64] = slice((ref mut value) as ptr i64, 1);
  let [head] = view;
  return head;
}
